# interactive-data-viz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: demo_students.csv
docs/: DECISIONS.md  ENGINEERING_NOTES.md  MENTOR_NOTES.md
src/interactive_data_viz/: __init__.py  __main__.py  main.py
src/interactive_data_viz/algorithms/: bst.py  metrics.py  sorting.py
src/interactive_data_viz/cleaning_pipeline/: cleaner.py  loader.py  report.py  validator.py
src/interactive_data_viz/viz/: plots.py  sorting_animator.py  tree_visualizer.py
tests/: test_algorithms.py  test_cleaning.py
